--- a/themes/flat/templates/_includes/nav.html
+++ b/themes/flat/templates/_includes/nav.html
@@ -32,6 +32,7 @@
           {% else %}
             <li><a href="{{SITEURL}}/blog.html">Home</a></li>
             <li><a href="{{SITEURL}}/index.html#about">About</a></li>
+            <li><a href="{{SITEURL}}/archives.html">Archives</a></li>
             {% if WORK_DESCRIPTION %}
             <li><a href="{{SITEURL}}/index.html#work">Work</a></li>
             {% endif %}
