--- a/themes/flat/static/css/blog.css
+++ b/themes/flat/static/css/blog.css
@@ -134,3 +134,12 @@ a:hover {
   color:#fff;
   box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.1), 0 0 10px 10px #1000FF, 0 0 0 10px rgba(255, 255, 255, 0.5);
 }
+
+/**
+  span.archive-date{
+     text-align:left;                                                                                                   
+     float:right;
+     background:url("../img/dotted-border.png") bottom left repeat-x;
+     color:#8eb6cb;
+  }
+
