--- a/themes/flat/templates/category.html
+++ b/themes/flat/templates/category.html
@@ -7,9 +7,9 @@
       </div>
       {% for article in articles %}
         {% if article.link %}
-          <p><span class="label label-default light">{{article.locale_date}}</span><a href="{{ article.link }}"> {{article.title}} <i class="fa fa-external-link" target="_blank"></i></a></p>
+          <p><span class="label label-default light">{{article.locale_date}}</span><a class="theme_link" href="{{ article.link }}"> {{article.title}} <i class="fa fa-external-link" target="_blank"></i></a></p>
         {%else%}
-          <p><span class="label label-default light"><a href="{{ SITEURL }}/{{ article.url }}">{{article.locale_date}}</span> {{article.title}}</a></p>
+          <p><span class="label label-default light">{{article.locale_date}}</span><a  class="theme_link" href="{{ SITEURL }}/{{ article.url }}"> {{article.title}}</a></p>
         {%endif%}
       {% endfor %}
   </div>
