--- a/themes/flat/templates/pagination.html
+++ b/themes/flat/templates/pagination.html
@@ -1,6 +1,6 @@
 {% if DEFAULT_PAGINATION %}
   <ul class="pagination">
-    <li id="prev" class="prev disabled"><a rel="prev">&larr; Previous</a></li>
-    <li id="next" class="next"><a rel="next">&rarr; Next</a></li>
+    <li id="prev" class="prev disabled"><a class="theme_link" rel="prev">&larr; Previous</a></li>
+    <li id="next" class="next"><a class="theme_link" rel="next">&rarr; Next</a></li>
   </ul>
 {% endif %}
