--- a/themes/flat/templates/article.html
+++ b/themes/flat/templates/article.html
@@ -1,5 +1,5 @@
 {% import "macros.html" as m %}
-{% extends "blog_base.html" %}
+{% extends "blog_base_simple.html" %}
 <!-- BLOG -->
 {%block content_area %}
   <!-- article title -->
