--- a/themes/flat/templates/blog_base_simple.html
+++ b/themes/flat/templates/blog_base_simple.html
@@ -3,13 +3,12 @@
 <body>
 
   {% include "_includes/nav.html" %}
-  <section id="blog">
-    <article class="container">
-        <div id="article_main_area">
+  <article class="container">
+
+  </article>
+  <div class="container article_main_area">
           {% block content_area %} {% endblock %}
-        </div>
-    </article>
-  </section>
+  </div>
   <!-- /BLOG -->
 
   {% include "_includes/footer.html" %}
