--- a/themes/flat/static/css/layout.css
+++ b/themes/flat/static/css/layout.css
@@ -472,8 +472,8 @@ span.archive-date{
     width:800px;
 }
 
-#article_main_area{
-    width: 90%;
-    padding-left: 10%;
+.article_main_area{
+    width: 60%;
+    margin-top:100px;
 }
 
