--- a/themes/flat/static/css/typography.css
+++ b/themes/flat/static/css/typography.css
@@ -37,10 +37,12 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   font-size:45px;
   line-height: 45px;
+  padding-top:20px;
 }
 h2 {
   font-size:35px;
   line-height: 35px;
+  padding-top:20px;
 }
 h3 {
   font-size:30px;
