--- a/themes/flat/templates/archives.html
+++ b/themes/flat/templates/archives.html
@@ -4,7 +4,8 @@
 
 <div class="container">
         <header class="text-center">
-                <h2>Archive</h2>
+               <p />
+               <br><h2>Archive</h2>
         </header>
 </div>
 
