--- a/themes/flat/static/css/blog.css
+++ b/themes/flat/static/css/blog.css
@@ -121,11 +121,11 @@
 
 /** This is the color that theme linkes show up as **/
 .theme_link {
-  color:#7E8344;
+  color:#666;
 }
 
 a:hover {
-  color:#999e52;
+  color:#4FB6C8;
 }
 .plusNav {
   background:#7E8344;
