--- a/themes/flat/templates/tag.html
+++ b/themes/flat/templates/tag.html
@@ -9,7 +9,7 @@
         {% if article.link %}
           <p><a href="{{ article.link }}"><span class="label label-default light">{{article.locale_date}}</span> {{article.title}} <i class="fa fa-external-link" target="_blank"></i></a></p>
         {%else%}
-          <p><a href="{{ SITEURL }}/{{ article.url }}"><span class="label label-default light">{{article.locale_date}}</span> {{article.title}}</a></p>
+          <p><a class="theme_link" href="{{ SITEURL }}/{{ article.url }}"><span class="label label-default light">{{article.locale_date}}</span> {{article.title}}</a></p>
         {%endif%}
       {% endfor %}
   </div>
