--- a/themes/flat/templates/_includes/header.html
+++ b/themes/flat/templates/_includes/header.html
@@ -27,6 +27,7 @@
     <link href="{{SITEURL}}/theme/css/framework.css" rel="stylesheet" type="text/css" />
     <link href="{{SITEURL}}/theme/css/typography.css" rel="stylesheet" type="text/css" />
     <link href="{{SITEURL}}/theme/css/layout.css" rel="stylesheet" type="text/css" />
+    <link href="{{SITEURL}}/theme/css/tag.css" rel="stylesheet" type="text/css" />
 
     <link href="{{SITEURL}}/theme/css/blog.css" rel="stylesheet" type="text/css" />
 
