--- a/themes/flat/static/css/blog.css
+++ b/themes/flat/static/css/blog.css
@@ -116,7 +116,7 @@
 
 /** This is the color that article linkes show up as **/
 .styleColor, ul.bstrap-tabs li.active a, ul.bstrap-tabs li.active a i, #portfolio div.item a:hover i.fa, section.util-row h1, .pagination>li>a, .pagination>li>span, .pagination>li>a:hover, a {
-  color:#7E8344;
+  color:#666;
 }
 
 /** This is the color that theme linkes show up as **/
