--- a/themes/flat/static/css/blog.css
+++ b/themes/flat/static/css/blog.css
@@ -153,4 +153,7 @@ pre {
      background:url("../img/dotted-border.png") bottom left repeat-x;
      color:#8eb6cb;
   }
-
+*/
+.content h2{
+        font-size:22px;
+}
