--- a/themes/flat/static/css/typography.css
+++ b/themes/flat/static/css/typography.css
@@ -102,7 +102,7 @@ section ul, section ul li {
   text-transform:uppercase;
 }
 p {
-  margin:0;
+  margin:18px;
   padding:1px 0;
   line-height:26px;
 }
