--- a/themes/notmyidea/static/css/layout.css
+++ b/themes/notmyidea/static/css/layout.css
@@ -42,3 +42,8 @@ footer a.toTop {
   border-top-right-radius: 9px;
   border-top-left-radius: 9px;
 }
+
+.entry-content{
+  margin-bottom: 25px;
+
+}
