--- a/themes/notmyidea/templates/index.html
+++ b/themes/notmyidea/templates/index.html
@@ -11,7 +11,8 @@
                 <section id="content" class="left col-md-9">
                    
             {% endif %}
-            <div class="item"><article class="hentry">
+            <div class="item">
+                <article class="hentry">
                 <header>
                     <h2><a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark"
                            title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a></h2>
@@ -24,7 +25,8 @@
                     <i class="fa fa-sign-out"></i>read more</a>
                 {% include 'comments.html' %}
                 </div><!-- /.entry-content -->
-            </article></div>
+                </article>
+            </div>
              
         
         {% if loop.last %}
@@ -32,7 +34,7 @@
             {% if articles_page.has_previous() or loop.length > 1 %}
                 {% include 'pagination.html' %}
             {% endif %}
-            {% if loop.length > 1 %}
+            {% if loop.length >= 1 %}
                 </section><!-- /#content -->
             {% endif %}
         {% endif %}
