--- a/themes/notmyidea/templates/about.html
+++ b/themes/notmyidea/templates/about.html
@@ -15,6 +15,22 @@
                 <li><i class="about fa fa-dot-circle-o"></i>邮箱: $ echo bWF3ZW50YW9Ad2h1LmVkdS5jbgo= | base64 -d</li>
         </ul>
     </section>
+{% if DISQUS_SITENAME and SITEURL and article.status != "draft" %}
+    <div class="comments">
+      <div id="disqus_thread"></div>
+      <script type="text/javascript">
+        var disqus_shortname = '{{ DISQUS_SITENAME }}';
+        var disqus_identifier = '{{ article.url }}';
+        var disqus_url = '{{ SITEURL }}/{{ article.url }}';
+        (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//{{ DISQUS_SITENAME }}.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+      </script>
+      <noscript>Please enable JavaScript to view the comments.</noscript>
+    </div>
+{% endif %}
 
 
 </div>
@@ -23,7 +39,6 @@
 
     
 
-{% include "_includes/disqus.html" %}
 {% include "_includes/footer.html" %}
 
 {% include 'analytics.html' %}
