--- a/themes/notmyidea/templates/about.html
+++ b/themes/notmyidea/templates/about.html
@@ -8,28 +8,14 @@
 	<section>
 	<h2 class="about-h2">作者简介</h2>
         <p>Marvin,WHU硕士,Scala拥趸,面向分布式编程,前端后端都搞点,做做网站写写博客刷刷微博。</p>
-        <p>爱旅行，喜撸串，打篮球，足球狂热粉丝，主队保密。</p>
+        <p>爱旅行，骑行爱好者，热爱打篮球，足球狂热粉丝，主队保密。</p>
         <p>联系方式:</p>
         <ul>
                 <li><i class="about fa fa-dot-circle-o"></i><a href="http://weibo.com/u/1799756001">微博</a></li>
                 <li><i class="about fa fa-dot-circle-o"></i>邮箱: $ echo bWF3ZW50YW9Ad2h1LmVkdS5jbgo= | base64 -d</li>
         </ul>
     </section>
-
-    <div class="comments">
-      <div id="disqus_thread"></div>
-      <script type="text/javascript">
-        var disqus_shortname = '{{ DISQUS_SITENAME }}';
-        var disqus_identifier = 'about.html';
-        var disqus_url = '{{ SITEURL }}/about.html';
-        (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = '//{{ DISQUS_SITENAME }}.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
-      </script>
-      <noscript>Please enable JavaScript to view the comments.</noscript>
-    </div>
+    <div class="placeHolder"></div>
 
 
 
