--- a/themes/notmyidea/static/css/layout.css
+++ b/themes/notmyidea/static/css/layout.css
@@ -6,6 +6,18 @@
 .container {
   position:relative;
   width:61.8%;
+  
+}
+
+.shadow-container{
+  width:72%;
+  -webkit-box-shadow: 0px 0px 15px 1px rgba(50, 50, 50, 1); 
+  -moz-box-shadow: 0px 0px 15px 1px rgba(50, 50, 50, 1);
+  box-shadow: 0px 0px 15px 1px rgba(50, 50, 50, 1);
+  background:rgba(210, 219, 219, 0.29);
+  padding-left: 5.5%;
+  padding-right:5.5%;
+
 }
 
 .sidebar{
@@ -125,4 +137,8 @@ section ul li .about {
 footer>.container>.row{
   margin-left: -18%;
   margin-right: -18%;
+}
+
+.placeHolder{
+  height:200px;
 }
