--- a/themes/notmyidea/templates/about.html
+++ b/themes/notmyidea/templates/about.html
@@ -4,7 +4,7 @@
 
 <body id="index" class="home">
 {% include "_includes/nav.html" %}
-<div class="container">
+<div class="container shadow-container">
 	<section>
 	<h2 class="about-h2">作者简介</h2>
         <p>Marvin,WHU硕士,Scala拥趸,面向分布式编程,前端后端都搞点,做做网站写写博客刷刷微博。</p>
