--- a/themes/notmyidea/templates/article.html
+++ b/themes/notmyidea/templates/article.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}{{ article.title|striptags }}{% endblock %}
 {% block content %}
-<div class="container">
+<div class="container shadow-container">
 <section id="content" class="body">
   <article>
     <header>
