--- a/themes/notmyidea/templates/index.html
+++ b/themes/notmyidea/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content_title %}{% endblock %}
 {% block content %}
-<div class="container">
+<div class="container shadow-container">
 <div class="row">
 
 <section id="content" class="left col-md-9">
@@ -9,12 +9,12 @@
     <div class="item">
         <article class="hentry">
             <header>
-                <h2>
+                <h3>
                     <a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark"
                            title="Permalink to {{ article.title|striptags }}">
                            {{ article.title }}
                     </a>
-                </h2>
+                </h3>
             </header>
             <div class="entry-content">
             {% include 'article_infos.html' %}
