--- a/themes/notmyidea/templates/archives.html
+++ b/themes/notmyidea/templates/archives.html
@@ -2,19 +2,14 @@
 <body>
 {% include "_includes/nav.html" %}
 
-<div class="container">
-        <header class="text-center">
-               <p />
-               <br><h2>Archive</h2>
-        </header>
-</div>
 
-<div class = "container archive-content">
-{% if GOOGLE_PARTNER_PUB %}
-    {% include '_includes/search.html' %}
-{% endif %}
+   
+<div class = "container archive-content shadow-container">
 
-
+<header class="text-center">
+	<p />
+	<br><h2>Archive</h2>
+</header>
 {% for year, date_year in dates|groupby( 'date.year' )|reverse %}
 <h3>{{ year }}</h3>
 {% for month, articles in date_year|groupby( 'date.month' )|reverse %}
