--- a/themes/notmyidea/static/css/layout.css
+++ b/themes/notmyidea/static/css/layout.css
@@ -104,11 +104,11 @@ form input[type="text"], #blog form input[type="password"], #blog form input[typ
   font-weight: 400;
 }
 
-#content li{
+/*#content li{
   list-style:none;
   margin-top:50px;
 
-}
+}*/
 
 i {
   margin-right:10px;
