--- a/themes/notmyidea/static/css/typography.css
+++ b/themes/notmyidea/static/css/typography.css
@@ -88,10 +88,17 @@ blockquote p {
 section header p {
   font-family:'Dosis';
 }
-section ul, section ul li {
+/*section ul, section ul li {
   margin:0;
   padding:0;
-  list-style:none;
+  list-style:none; 
+}*/
+
+.about ul li{
+  margin-top:10px;
+  padding:0;
+  list-style:none; 
+
 }
 /* ---------- /SECTION ---------- */
 
