--- a/themes/notmyidea/static/css/layout.css
+++ b/themes/notmyidea/static/css/layout.css
@@ -14,7 +14,7 @@
   -webkit-box-shadow: 0px 0px 15px 1px rgba(50, 50, 50, 1); 
   -moz-box-shadow: 0px 0px 15px 1px rgba(50, 50, 50, 1);
   box-shadow: 0px 0px 15px 1px rgba(50, 50, 50, 1);
-  background: url(../images/bg-site.gif) repeat top left fixed;
+  background: url(../images/content-bg-1.png) repeat top;
   padding-left: 5.5%;
   padding-right:5.5%;
   margin-bottom:20px;
@@ -23,6 +23,7 @@
 
 .sidebar{
 	  padding-top: 100px;
+    padding-left: 40px;
 }
 
 .section{
@@ -144,6 +145,10 @@ footer>.container>.row{
   height:250px;
 }
 
+.row {
+  margin-left: -40px;
+  margin-right: -40px;
+}
 /*.about-img{
   
 }*/
