--- a/themes/notmyidea/templates/archives.html
+++ b/themes/notmyidea/templates/archives.html
@@ -4,7 +4,7 @@
 
 
    
-<div class = "container archive-content shadow-container">
+<div class = "container  shadow-container">
 
 <header class="text-center">
 	<p />
