--- a/themes/notmyidea/templates/index.html
+++ b/themes/notmyidea/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content_title %}{% endblock %}
 {% block content %}
-<div class="container shadow-container">
+<div class="container shadow-container-index">
 <div class="row">
 
 <section id="content" class="left col-md-9">
