--- a/themes/notmyidea/static/css/layout.css
+++ b/themes/notmyidea/static/css/layout.css
@@ -1,7 +1,7 @@
  html, body {
   overflow-x:hidden;
   overflow-x:hidden;
-  background:#ffffff;
+  background:#ac7c5d url(../images/body-bg.jpg);
 }
 .container {
   position:relative;
