--- a/themes/notmyidea/static/css/typography.css
+++ b/themes/notmyidea/static/css/typography.css
@@ -27,7 +27,7 @@
   line-height: 1.5;
 }
 h1, h2, h3, h4, h5, h6 {
-  font-family:'Dosis';
+  font-family:"Lantinghei SC", "Open Sans", Arial, "Hiragino Sans GB", "Microsoft YaHei", "STHeiti", "WenQuanYi Micro Hei", sans-serif;
   font-weight: 300;
   padding:0;
   margin:0;
