--- a/themes/notmyidea/static/css/layout.css
+++ b/themes/notmyidea/static/css/layout.css
@@ -3,6 +3,7 @@
   overflow-x:hidden;
   background:#000000 url(../images/body-bg-dark.jpg);
   background-repeat: no-repeat;
+  background-size:contain;
 }
 .container {
   position:relative;
