--- a/themes/notmyidea/static/css/typography.css
+++ b/themes/notmyidea/static/css/typography.css
@@ -83,6 +83,7 @@ blockquote p {
   position:relative;
   display:block;
   z-index:1;
+  margin-bottom:20px;
   /* footer fixed = 0 */
 }
 section header p {
