--- a/themes/notmyidea/static/css/typography.css
+++ b/themes/notmyidea/static/css/typography.css
@@ -203,7 +203,36 @@ a:hover {
 
 }
 
+.share-group a i {
+  margin-left:10px;
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  display: inline-block;
+  color: #ffffff;
+  background: #aaaaaa;
+  line-height: 28px;
+  text-align: center;
+  font-size: 14px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  opacity: 1;
+  -webkit-transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  transform: translate(0, 0);
+  background: #d04340;
+  font-size: 16px;
+}
 
+.share-group{
+    display: inline-block;
+
+}
+
+.share{
+  float:right;
+  margin-bottom: 10px;
+}
 
 
  
