--- a/themes/notmyidea/templates/_includes/sidebar.html
+++ b/themes/notmyidea/templates/_includes/sidebar.html
@@ -26,6 +26,11 @@
 {% endif %}
       
 <!-- categories -->
+<!-- <div class="widget">
+  <a href="http://weibo.com/u/1799756001"; target="_blank">
+    <img border="0" src="http://service.t.sina.com.cn/widget/qmd/1799756001/8c17d4b5/1.png";>
+  </a>
+</div> -->
 <div class="widget">
   <h3>Categories</h3>
   <ul>
