--- a/themes/notmyidea/templates/_includes/sidebar.html
+++ b/themes/notmyidea/templates/_includes/sidebar.html
@@ -1,11 +1,10 @@
 <div class="right col-md-3 sidebar">
 {% if SWIFTYPE %}
 <!-- blog search -->
-<div class="widget">
-  <h3>Blog Search</h3>
+<!-- <div class="widget">
   <form action="#" method="get" class="blog-search col-lg-12 nomargin nopadding">
     <div class="input-group input-group-lg">
-      <input type="text" class="form-control" name="s" id="st-search-input" placeholder="..." />
+      <input type="text" class="form-control" name="s" id="st-search-input" placeholder="search this site" />
       <script type="text/javascript">
       var Swiftype = window.Swiftype ||{};
       (function()
@@ -22,7 +21,7 @@
       </script>
     </div>
   </form>
-</div>
+</div> -->
 {% endif %}
       
 <!-- categories -->
