--- a/themes/notmyidea/templates/index.html
+++ b/themes/notmyidea/templates/index.html
@@ -16,8 +16,8 @@
                     </a>
                 </h3>
             </header>
-            <div class="entry-content">
-            {% include 'article_infos.html' %}
+            <div class="entry-content index">
+ <!--            {% include 'article_infos.html' %} -->
             {{ article.summary }}
                 <a class="btn btn-xs theme_link" href="{{ SITEURL }}/{{ article.url }}">
                     <i class="fa fa-sign-out"></i>read more</a>
