--- a/themes/notmyidea/static/css/layout.css
+++ b/themes/notmyidea/static/css/layout.css
@@ -180,7 +180,7 @@ footer>.container>.row{
   height: 100%;
   position: fixed;
   background-repeat: repeat;
-  background-image: url("../images/bg-wood-002.png");
+  background-image: url("../images/bg-wood-002.jpg");
 }
 
 
