--- a/themes/notmyidea/static/css/typography.css
+++ b/themes/notmyidea/static/css/typography.css
@@ -52,7 +52,7 @@ h3>a{
 h4 {
   font-size:24px;
   line-height: 24px;
-  color: sienna;
+  color: rgba(0, 0, 0, 0.47);
   margin-bottom: 12px;
 }
 a, a:hover, a:focus {
@@ -156,7 +156,12 @@ pre {
 }
 
 a,.theme_link{
-  color:rgba(255, 255, 255, 0.7);
+  color:rgba(136, 99, 71, 0.77);
+}
+
+/**multi nest class no ',' **/
+.widget a{
+  color:rgba(255,255,255,0.7);
 }
 
 .archive-sidebar{
