--- a/themes/notmyidea/static/css/layout.css
+++ b/themes/notmyidea/static/css/layout.css
@@ -13,9 +13,9 @@
 
 .shadow-container{
   width:70%;
-/*  -webkit-box-shadow: 0px 0px 15px 1px rgba(50, 50, 50, 1); 
+  -webkit-box-shadow: 0px 0px 15px 1px rgba(50, 50, 50, 1); 
   -moz-box-shadow: 0px 0px 15px 1px rgba(50, 50, 50, 1);
-  box-shadow: 0px 0px 15px 1px rgba(50, 50, 50, 1);*/
+  box-shadow: 0px 0px 15px 1px rgba(50, 50, 50, 1);
   background: url(../images/content-bg.png) repeat top;
   padding-left: 5.5%;
   padding-right:5.5%;
