--- a/themes/notmyidea/templates/_includes/header.html
+++ b/themes/notmyidea/templates/_includes/header.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="baidu-site-verification" content="xu0VvirP0g" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title>{{ SITENAME }} - {{ SITESUBTITLE }}</title>
     <meta name="description" content="" />
