--- a/themes/notmyidea/templates/comments.html
+++ b/themes/notmyidea/templates/comments.html
@@ -1,1 +1,3 @@
-{% if DISQUS_SITENAME %}<p>There are <a href="{{ SITEURL }}/{{ article.url }}#disqus_thread">comments</a>.</p>{% endif %}
+<!-- {% if DISQUS_SITENAME %}<p>There are <a href="{{ SITEURL }}/{{ article.url }}#disqus_thread">comments</a>.</p>{% endif %} -->
+<span class="ds-thread-count" data-thread-key='{{article.title}}' data-count-type="comments">
+</span>
