--- a/themes/notmyidea/templates/_includes/footer.html
+++ b/themes/notmyidea/templates/_includes/footer.html
@@ -114,3 +114,15 @@
     } catch( err ) {}
     </script><noscript><p><img src="http://{{ PIWIK_URL }}/piwik.php?idsite={{ PIWIK_SITE_ID }}" style="border:0" alt="" /></p></noscript>
 {% endif %}
+
+
+<script type="text/javascript">
+var duoshuoQuery = {short_name:"marvin007"};
+(function() {
+    var ds = document.createElement('script');
+    ds.type = 'text/javascript';ds.async = true;
+    ds.src = 'http://static.duoshuo.com/embed.js';
+    ds.charset = 'UTF-8';
+    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ds);
+})();
+</script>
