--- a/themes/notmyidea/templates/comments.html
+++ b/themes/notmyidea/templates/comments.html
@@ -1,3 +1,6 @@
 <!-- {% if DISQUS_SITENAME %}<p>There are <a href="{{ SITEURL }}/{{ article.url }}#disqus_thread">comments</a>.</p>{% endif %} -->
-<span class="ds-thread-count" data-thread-key='{{article.title}}' data-count-type="comments">
-</span>
+<p>
+	<a href="{{ SITEURL }}/{{ article.url }}#ds-thread">
+		<span class="ds-thread-count" data-thread-key='{{article.title}}' data-count-type="comments"></span>
+	</a>
+</p>
