--- a/themes/notmyidea/templates/comments.html
+++ b/themes/notmyidea/templates/comments.html
@@ -1,4 +1,4 @@
-<!-- {% if DISQUS_SITENAME %}<p>There are <a href="{{ SITEURL }}/{{ article.url }}#disqus_thread">comments</a>.</p>{% endif %} -->
+{% if DISQUS_SITENAME %}<p>There are <a href="{{ SITEURL }}/{{ article.url }}#disqus_thread">comments</a>.</p>{% endif %}
 <p>
 	<a href="{{ SITEURL }}/{{ article.url }}#ds-thread">
 		<span class="ds-thread-count" data-thread-key='{{article.title}}' data-count-type="comments"></span>
