--- a/themes/notmyidea/static/css/typography.css
+++ b/themes/notmyidea/static/css/typography.css
@@ -98,6 +98,10 @@ blockquote p {
   /* footer fixed = 0 */
 }
 
+section#content.col-md-9{
+  margin-top:30px;
+}
+
 section.body{
   margin-top:6%;
   margin-left: 6%;
